gmail fixes
